--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-clap = { version = "4", features = ["derive"] }
+clap = { version = "4.5", features = ["derive"] }
+reqwest = { version = "0.11", features = ["blocking", "json"] }
+flate2 = "1.0"
+tar = "0.4"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 directories = "5.0"
-fs_extra = "1.3"
