--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ tar = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 directories = "5.0"
+dirs = "6.0.0"
+ureq = { version = "2.9.6", features = ["json"] }
+
