--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "jetpm"
+name = "neonpack"
 version = "0.1.0"
 edition = "2024"
 
@@ -13,4 +13,6 @@ serde_json = "1.0"
 directories = "5.0"
 dirs = "6.0.0"
 ureq = { version = "2.9.6", features = ["json"] }
-
+toml_edit = "0.23.1"
+bytes = "1"
+regex = "1.10"
